Added Auth0 Authentication
